--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,10 @@ GIMP version 2.0.
 
 Overview of Changes in GIMP 1.3.23
 ==================================
+- Theme switching in the preferences dialog [Mitch]
+- Added a small theme [Mitch]
+- Cleanup and unification of message strings [Mitch]
+- 64bit clean libgimp API [Yosh]
 - New plug-in color selector using color-selector modules [Mitch]
 - GimpCanvas drawing abstraction [Sven]
 - Added DICOM file plug-in by Dov Grobgeld
@@ -25,7 +29,8 @@ Overview of Changes in GIMP 1.3.23
 Other contributors:
   Ville Pätsi, Eric Pierce, Tor Lillqvist, Henrik Brix Andersen,
   Manish Singh, Dom Lachowicz, Francis James Franklin, Dave Neary,
-  Maurits Rijk
+  Maurits Rijk, Joao S. O. Bueno, Michael Schumacher, Daniel Rogers,
+  Hans Breuer
 
 
 Overview of Changes in GIMP 1.3.22
