2003-11-16  Sven Neumann  <sven@gimp.org>
	* app/plug-in/plug-ins.c: disabled debugging output.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11482 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-11-16  Sven Neumann  <sven@gimp.org>
 
+	* app/plug-in/plug-ins.c: disabled debugging output.
+
+2003-11-16  Sven Neumann  <sven@gimp.org>
+
 	* app/gui/themes.c (themes_apply_theme): removed an unused
 	variable and trailing whitespace.
 
