2003-11-16  Michael Natterer  <mitch@gimp.org>
	* app/main.c (main): call units_init() before gimp_config_dump().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11483 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-16  Michael Natterer  <mitch@gimp.org>
+
+	* app/main.c (main): call units_init() before gimp_config_dump().
+
 2003-11-16  Sven Neumann  <sven@gimp.org>
 
 	* app/plug-in/plug-ins.c: disabled debugging output.
