2003-11-16 Henrik Brix Andersen <brix@gimp.org>
* app/config/gimpguiconfig.c (DEFAULT_WEB_BROWSER): changed
DEFAULT_WEB_BROWSER to "mozilla %s"

* plug-ins/common/webbrowser.c (browser_open_url): quote the url
here instead


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11484 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-11-16  Henrik Brix Andersen  <brix@gimp.org>
+
+	* app/config/gimpguiconfig.c (DEFAULT_WEB_BROWSER): changed
+	DEFAULT_WEB_BROWSER to "mozilla %s"
+
+	* plug-ins/common/webbrowser.c (browser_open_url): quote the url
+	here instead
+
 2003-11-16  Michael Natterer  <mitch@gimp.org>
 
 	* app/main.c (main): call units_init() before gimp_config_dump().
