--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-17  Michael Natterer  <mitch@gimp.org>
+
+	* app/Makefile.am: s/libgimp_glue.o/units.o/.
+
+	* app/app-docs.sgml
+	* app/app-sections.txt: updates and fixes.
+
 2003-11-16  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/Makefile.am: ignore "gimpunitcache.h".
