2003-11-17  Manish Singh  <yosh@gimp.org>
        * tools/gimp-remote.c (gimp_remote_find_window): search for the
        window role "gimp-toolbox", since the app sets that instead of
        the class now.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11491 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-17  Manish Singh  <yosh@gimp.org>
+
+	* tools/gimp-remote.c (gimp_remote_find_window): search for the
+	window role "gimp-toolbox", since the app sets that instead of
+	the class now.
+
 2003-11-17  Sven Neumann  <sven@gimp.org>
 
 	* app/config/gimprc.c (gimp_rc_new): simplified.
