--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-17  Sven Neumann  <sven@gimp.org>
+
+	* libgimpcolor/libgimpcolor-sections.txt: 
+	* libgimpcolor/tmp/gimprgb.sgml: documented GIMP_RGB_INTENSITY().
+
 2003-11-17  Michael Natterer  <mitch@gimp.org>
 
 	* app/Makefile.am: s/libgimp_glue.o/units.o/.
