2003-11-17  Michael Natterer  <mitch@gimp.org>
	* modules/colorsel_triangle.c (colorsel_triangle_update_previews):
	s/INTENSITY/GIMP_RGB_INTENSITY/, removed trailing whitespace.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11495 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-17  Michael Natterer  <mitch@gimp.org>
+
+	* modules/colorsel_triangle.c (colorsel_triangle_update_previews): 
+	s/INTENSITY/GIMP_RGB_INTENSITY/, removed trailing whitespace.
+
 2003-11-17  Sven Neumann  <sven@gimp.org>
 
 	* libgimpcolor/gimprgb.[ch]: added a GIMP_RGB prefix to the
