2003-11-17 Henrik Brix Andersen <brix@gimp.org>
* plug-ins/common/color_enhance.c
* plug-ins/common/c_astretch.c
* plug-ins/common/gtm.c: removed potentionally offensive words +
removed trailing whitespace. This fixes bug #125668.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11499 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-17  Henrik Brix Andersen  <brix@gimp.org>
+
+	* plug-ins/common/color_enhance.c
+	* plug-ins/common/c_astretch.c
+	* plug-ins/common/gtm.c: removed potentionally offensive words +
+	trailing whitespace. This fixes bug #125668.
+
 2003-11-17  Sven Neumann  <sven@gimp.org>
 
 	* libgimpcolor/gimprgb.h (GIMP_RGB_INTENSITY): removed the
