--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-11-18  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpcontainerpopup.[ch]
+	* app/widgets/gimpviewablebutton.[ch]: let the button remember
+	the popup's preview_size and view_type.
+
+2003-11-18  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimpdialogfactory.[ch]
 	(gimp_dialog_factory_dialog_raise): support '|'-separated lists of
 	dialog identifiers and raise any of them if it is already open, or
