2003-11-18  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/png.c (load_image): inform the user when a PNG
	file specifies an offset that causes the layer to be positioned
	outside the image area. Fixes "bug" #127307.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11506 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-18  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/png.c (load_image): inform the user when a PNG
+	file specifies an offset that causes the layer to be positioned
+	outside the image area. Fixes "bug" #127307.
+
 2003-11-18  Michael Natterer  <mitch@gimp.org>
 
 	* app/base/colorize.[ch]: changed the range of the "lightness"
