2003-11-19  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/tmpl/gimpquerybox.sgml: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11508 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,7 @@
+2003-11-19  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/tmpl/gimpquerybox.sgml: updated.
+
 2003-11-17  Sven Neumann  <sven@gimp.org>
 
 	* libgimpcolor/libgimpcolor-sections.txt: 
