2003-11-19  Sven Neumann  <sven@gimp.org>
	* app/app_procs.c (app_run): register a log handler for the
	"Gimp-Vectors" domain.

	* app/gui/stroke-dialog.c (stroke_dialog_new): attach the saved
	options to its parent, the user context, not to the gimp.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11509 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-11-19  Sven Neumann  <sven@gimp.org>
+
+	* app/app_procs.c (app_run): register a log handler for the
+	"Gimp-Vectors" domain.
+
+	* app/gui/stroke-dialog.c (stroke_dialog_new): attach the saved
+	options to its parent, the user context, not to the gimp.
+
 2003-11-18  Sven Neumann  <sven@gimp.org>
 
 	* libgimpmodule/gimpmodule.c (gimp_module_open): don't do lazy
