2003-11-19  Michael Natterer  <mitch@gimp.org>
	* libgimpwidgets/gimpwidgetstypes.h: renamed "data" parameter
	of GimpHelpFunc to "help_data".

	* libgimpwidgets/gimphelpui.c: cleanup. API doc fixes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11511 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2003-11-19  Michael Natterer  <mitch@gimp.org>
+
+	* libgimpwidgets/gimpwidgetstypes.h: renamed "data" parameter
+	of GimpHelpFunc to "help_data".
+
+	* libgimpwidgets/gimphelpui.c: cleanup. API doc fixes.
+
 2003-11-19  Sven Neumann  <sven@gimp.org>
 
 	* app/core/gimpcontext.c (gimp_context_finalize): don't disconnect
