--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,22 @@
 2003-11-19  Michael Natterer  <mitch@gimp.org>
 
+	* plug-ins/FractalExplorer/Dialogs.c
+	* plug-ins/common/CEL.c
+	* plug-ins/common/CML_explorer.c
+	* plug-ins/common/curve_bend.c
+	* plug-ins/common/gqbist.c
+	* plug-ins/common/spheredesigner.c
+	* plug-ins/flame/flame.c
+	* plug-ins/gfig/gfig.c
+	* plug-ins/gimpressionist/brush.c
+	* plug-ins/ifscompose/ifscompose.c
+	* plug-ins/imagemap/imap_browse.c
+	* plug-ins/imagemap/imap_file.c: GtkFileSelection cleanup:
+	connect to "response" instead of accessing the "ok_button"
+	and "cancel_button" members.
+
+2003-11-19  Michael Natterer  <mitch@gimp.org>
+
 	* libgimpwidgets/gimpwidgetstypes.h: renamed "data" parameter
 	of GimpHelpFunc to "help_data".
 
